src/main/java/dev/conductor/centra/domain/search/cql/cqlParser.java
// Generated from D:\soft\free\centra\Centra\tools\bat\..\..\src\main\antlr4\dev\conductor\cql\cql.g4 by ANTLR 4.9
package dev.conductor.centra.domain.search.cql;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class cqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DATETIME=1, NUMBER=2, WHITESPACE=3, SCOL=4, DOT=5, OPEN_PAR=6, CLOSE_PAR=7, 
		COMMA=8, EQ=9, STAR=10, CONTAINS=11, NOT_CONTAINS=12, LT=13, LT_EQ=14, 
		GT=15, GT_EQ=16, NOT_EQ=17, K_AFTER=18, K_AND=19, K_ASC=20, K_BEFORE=21, 
		K_BY=22, K_CHANGED=23, K_DESC=24, K_EMPTY=25, K_IN=26, K_IS=27, K_NOT=28, 
		K_NULL=29, K_ON=30, K_OR=31, K_ORDER=32, K_TO=33, K_WAS=34, F_AFFECTED_VERSION=35, 
		F_APPROVALS=36, F_ASSIGNEE=37, F_ATTACHMENTS=38, F_CATEGORY=39, F_COMMENT=40, 
		F_COMPONENT=41, F_CREATED=42, F_CREATED_DATE=43, F_CREATOR=44, F_CUSTOM_FIELD=45, 
		F_CUSTOMER_REQUEST_TYPE=46, F_DATE=47, F_DESCRIPTION=48, F_DUE=49, F_DURATION=50, 
		F_ENVIRONMENT=51, F_EPIC_LINK=52, F_FILTER=53, F_FIX_VERSION=54, F_ISSUE=55, 
		F_ISSUE_KEY=56, F_ISSUE_TYPE=57, F_KEY=58, F_LABEL=59, F_LABELS=60, F_LAST_VIEWED=61, 
		F_LEVEL=62, F_NUMBER=63, F_ORGANIZATION=64, F_ORIGINAL_ESTIMATE=65, F_PARENT=66, 
		F_PRIORITY=67, F_PROJECT=68, F_PROJECT_KEY=69, F_RANK=70, F_REMAINING_ESTIMATE=71, 
		F_REPORTER=72, F_REQUEST_CHANNEL_TYPE=73, F_REQUEST_LAST_ACTIVITY_TIME=74, 
		F_RESOLUTION=75, F_RESOLUTION_DATE=76, F_RESOLVED=77, F_SLA=78, F_SPRINT=79, 
		F_STATUS=80, F_SUMMARY=81, F_TEXT=82, F_TIME_SPENT=83, F_TYPE=84, F_UPDATED=85, 
		F_USER=86, F_VERSION=87, F_VOTER=88, F_VOTES=89, F_WATCHER=90, F_WATCHERS=91, 
		F_WORK_RATIO=92, IDENTIFIER=93, STRING_LITERAL=94, COMMENT=95, LINE_COMMENT=96, 
		SPACES=97;
	public static final int
		RULE_parse = 0, RULE_cql_stmt_list = 1, RULE_cql_stmt = 2, RULE_logical_expression = 3, 
		RULE_expr = 4, RULE_right_value = 5, RULE_left_value = 6, RULE_ordering_term = 7, 
		RULE_ordering_list = 8, RULE_ordering_list_item = 9, RULE_order_by = 10, 
		RULE_operator = 11, RULE_literal_value = 12, RULE_function_call = 13, 
		RULE_argument_list = 14, RULE_function_argument = 15, RULE_literal_list = 16, 
		RULE_keyword = 17, RULE_state_name = 18, RULE_field = 19, RULE_compare_dates = 20, 
		RULE_dates = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "cql_stmt_list", "cql_stmt", "logical_expression", "expr", "right_value", 
			"left_value", "ordering_term", "ordering_list", "ordering_list_item", 
			"order_by", "operator", "literal_value", "function_call", "argument_list", 
			"function_argument", "literal_list", "keyword", "state_name", "field", 
			"compare_dates", "dates"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "' '", "';'", "'.'", "'('", "')'", "','", "'='", "'*'", 
			"'~'", "'!~'", "'<'", "'<='", "'>'", "'>='", "'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DATETIME", "NUMBER", "WHITESPACE", "SCOL", "DOT", "OPEN_PAR", 
			"CLOSE_PAR", "COMMA", "EQ", "STAR", "CONTAINS", "NOT_CONTAINS", "LT", 
			"LT_EQ", "GT", "GT_EQ", "NOT_EQ", "K_AFTER", "K_AND", "K_ASC", "K_BEFORE", 
			"K_BY", "K_CHANGED", "K_DESC", "K_EMPTY", "K_IN", "K_IS", "K_NOT", "K_NULL", 
			"K_ON", "K_OR", "K_ORDER", "K_TO", "K_WAS", "F_AFFECTED_VERSION", "F_APPROVALS", 
			"F_ASSIGNEE", "F_ATTACHMENTS", "F_CATEGORY", "F_COMMENT", "F_COMPONENT", 
			"F_CREATED", "F_CREATED_DATE", "F_CREATOR", "F_CUSTOM_FIELD", "F_CUSTOMER_REQUEST_TYPE", 
			"F_DATE", "F_DESCRIPTION", "F_DUE", "F_DURATION", "F_ENVIRONMENT", "F_EPIC_LINK", 
			"F_FILTER", "F_FIX_VERSION", "F_ISSUE", "F_ISSUE_KEY", "F_ISSUE_TYPE", 
			"F_KEY", "F_LABEL", "F_LABELS", "F_LAST_VIEWED", "F_LEVEL", "F_NUMBER", 
			"F_ORGANIZATION", "F_ORIGINAL_ESTIMATE", "F_PARENT", "F_PRIORITY", "F_PROJECT", 
			"F_PROJECT_KEY", "F_RANK", "F_REMAINING_ESTIMATE", "F_REPORTER", "F_REQUEST_CHANNEL_TYPE", 
			"F_REQUEST_LAST_ACTIVITY_TIME", "F_RESOLUTION", "F_RESOLUTION_DATE", 
			"F_RESOLVED", "F_SLA", "F_SPRINT", "F_STATUS", "F_SUMMARY", "F_TEXT", 
			"F_TIME_SPENT", "F_TYPE", "F_UPDATED", "F_USER", "F_VERSION", "F_VOTER", 
			"F_VOTES", "F_WATCHER", "F_WATCHERS", "F_WORK_RATIO", "IDENTIFIER", "STRING_LITERAL", 
			"COMMENT", "LINE_COMMENT", "SPACES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "cql.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public cqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(cqlParser.EOF, 0); }
		public List<Cql_stmt_listContext> cql_stmt_list() {
			return getRuleContexts(Cql_stmt_listContext.class);
		}
		public Cql_stmt_listContext cql_stmt_list(int i) {
			return getRuleContext(Cql_stmt_listContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cqlListener ) ((cqlListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cqlListener ) ((cqlListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cqlVisitor ) return ((cqlVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCOL) | (1L << OPEN_PAR) | (1L << K_NOT) | (1L << F_AFFECTED_VERSION) | (1L << F_APPROVALS) | (1L << F_ASSIGNEE) | (1L << F_ATTACHMENTS) | (1L << F_CATEGORY) | (1L << F_COMMENT) | (1L << F_COMPONENT) | (1L << F_CREATED) | (1L << F_CREATED_DATE) | (1L << F_CREATOR) | (1L << F_CUSTOM_FIELD) | (1L << F_CUSTOMER_REQUEST_TYPE) | (1L << F_DATE) | (1L << F_DESCRIPTION) | (1L << F_DUE) | (1L << F_DURATION) | (1L << F_ENVIRONMENT) | (1L << F_EPIC_LINK) | (1L << F_FILTER) | (1L << F_FIX_VERSION) | (1L << F_ISSUE) | (1L << F_ISSUE_KEY) | (1L << F_ISSUE_TYPE) | (1L << F_KEY) | (1L << F_LABEL) | (1L << F_LABELS) | (1L << F_LAST_VIEWED) | (1L << F_LEVEL) | (1L << F_NUMBER))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (F_ORGANIZATION - 64)) | (1L << (F_ORIGINAL_ESTIMATE - 64)) | (1L << (F_PARENT - 64)) | (1L << (F_PRIORITY - 64)) | (1L << (F_PROJECT - 64)) | (1L << (F_PROJECT_KEY - 64)) | (1L << (F_RANK - 64)) | (1L << (F_REMAINING_ESTIMATE - 64)) | (1L << (F_REPORTER - 64)) | (1L << (F_REQUEST_CHANNEL_TYPE - 64)) | (1L << (F_REQUEST_LAST_ACTIVITY_TIME - 64)) | (1L << (F_RESOLUTION - 64)) | (1L << (F_RESOLUTION_DATE - 64)) | (1L << (F_RESOLVED - 64)) | (1L << (F_SLA - 64)) | (1L << (F_SPRINT - 64)) | (1L << (F_STATUS - 64)) | (1L << (F_SUMMARY - 64)) | (1L << (F_TEXT - 64)) | (1L << (F_TIME_SPENT - 64)) | (1L << (F_TYPE - 64)) | (1L << (F_UPDATED - 64)) | (1L << (F_USER - 64)) | (1L << (F_VERSION - 64)) | (1L << (F_VOTER - 64)) | (1L << (F_VOTES - 64)) | (1L << (F_WATCHER - 64)) | (1L << (F_WATCHERS - 64)) | (1L << (F_WORK_RATIO - 64)))) != 0)) {
				{
				{
				setState(44);
				cql_stmt_list();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(50);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cql_stmt_listContext extends ParserRuleContext {
		public List<Cql_stmtContext> cql_stmt() {
			return getRuleContexts(Cql_stmtContext.class);
		}
		public Cql_stmtContext cql_stmt(int i) {
			return getRuleContext(Cql_stmtContext.class,i);
		}
		public List<TerminalNode> SCOL() { return getTokens(cqlParser.SCOL); }
		public TerminalNode SCOL(int i) {
			return getToken(cqlParser.SCOL, i);
		}
		public Cql_stmt_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cql_stmt_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cqlListener ) ((cqlListener)listener).enterCql_stmt_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cqlListener ) ((cqlListener)listener).exitCql_stmt_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cqlVisitor ) return ((cqlVisitor<? extends T>)visitor).visitCql_stmt_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cql_stmt_listContext cql_stmt_list() throws RecognitionException {
		Cql_stmt_listContext _localctx = new Cql_stmt_listContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_cql_stmt_list);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SCOL) {
				{
				setState(52);
				match(SCOL);
				}
			}

			setState(55);
			cql_stmt();
			setState(64);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(57); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(56);
						match(SCOL);
						}
						}
						setState(59); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==SCOL );
					setState(61);
					cql_stmt();
					}
					} 
				}
				setState(66);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(68);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(67);
				match(SCOL);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cql_stmtContext extends ParserRuleContext {
		public Logical_expressionContext logical_expression() {
			return getRuleContext(Logical_expressionContext.class,0);
		}
		public Ordering_termContext ordering_term() {
			return getRuleContext(Ordering_termContext.class,0);
		}
		public Cql_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cql_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cqlListener ) ((cqlListener)listener).enterCql_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cqlListener ) ((cqlListener)listener).exitCql_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cqlVisitor ) return ((cqlVisitor<? extends T>)visitor).visitCql_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cql_stmtContext cql_stmt() throws RecognitionException {
		Cql_stmtContext _localctx = new Cql_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cql_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			logical_expression(0);
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==K_ORDER) {
				{
				setState(71);
				ordering_term();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logical_expressionContext extends ParserRuleContext {
		public Logical_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical_expression; }
	 
		public Logical_expressionContext() { }
		public void copyFrom(Logical_expressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AndLogicalExpressionContext extends Logical_expressionContext {
		public List<Logical_expressionContext> logical_expression() {
			return getRuleContexts(Logical_expressionContext.class);
		}
		public Logical_expressionContext logical_expression(int i) {
			return getRuleContext(Logical_expressionContext.class,i);
		}
		public TerminalNode K_AND() { return getToken(cqlParser.K_AND, 0); }
		public AndLogicalExpressionContext(Logical_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cqlListener ) ((cqlListener)listener).enterAndLogicalExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cqlListener ) ((cqlListener)listener).exitAndLogicalExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cqlVisitor ) return ((cqlVisitor<? extends T>)visitor).visitAndLogicalExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OrLogicalExpressionContext extends Logical_expressionContext {
		public List<Logical_expressionContext> logical_expression() {
			return getRuleContexts(Logical_expressionContext.class);
		}
		public Logical_expressionContext logical_expression(int i) {
			return getRuleContext(Logical_expressionContext.class,i);
		}
		public TerminalNode K_OR() { return getToken(cqlParser.K_OR, 0); }
		public OrLogicalExpressionContext(Logical_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cqlListener ) ((cqlListener)listener).enterOrLogicalExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cqlListener ) ((cqlListener)listener).exitOrLogicalExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cqlVisitor ) return ((cqlVisitor<? extends T>)visitor).visitOrLogicalExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BracedExpressionContext extends Logical_expressionContext {
		public TerminalNode OPEN_PAR() { return getToken(cqlParser.OPEN_PAR, 0); }
		public Logical_expressionContext logical_expression() {
			return getRuleContext(Logical_expressionContext.class,0);
		}
		public TerminalNode CLOSE_PAR() { return getToken(cqlParser.CLOSE_PAR, 0); }
		public BracedExpressionContext(Logical_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cqlListener ) ((cqlListener)listener).enterBracedExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cqlListener ) ((cqlListener)listener).exitBracedExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cqlVisitor ) return ((cqlVisitor<? extends T>)visitor).visitBracedExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NegatedLogicalExpressionContext extends Logical_expressionContext {
		public TerminalNode K_NOT() { return getToken(cqlParser.K_NOT, 0); }
		public Logical_expressionContext logical_expression() {
			return getRuleContext(Logical_expressionContext.class,0);
		}
		public NegatedLogicalExpressionContext(Logical_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cqlListener ) ((cqlListener)listener).enterNegatedLogicalExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cqlListener ) ((cqlListener)listener).exitNegatedLogicalExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cqlVisitor ) return ((cqlVisitor<? extends T>)visitor).visitNegatedLogicalExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SimpleExpressionContext extends Logical_expressionContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SimpleExpressionContext(Logical_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cqlListener ) ((cqlListener)listener).enterSimpleExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cqlListener ) ((cqlListener)listener).exitSimpleExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cqlVisitor ) return ((cqlVisitor<? extends T>)visitor).visitSimpleExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logical_expressionContext logical_expression() throws RecognitionException {
		return logical_expression(0);
	}

	private Logical_expressionContext logical_expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Logical_expressionContext _localctx = new Logical_expressionContext(_ctx, _parentState);
		Logical_expressionContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_logical_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPEN_PAR:
				{
				_localctx = new BracedExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
